# Resonix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  pyproject.toml  setup.py
config/: CMakeLists.txt
include/: Filter.hpp  Generator.hpp  Math.h  Math.hpp  Resonix.hpp
python/: bindings.cpp
scripts/: build.sh
src/: Resonix.cpp
src/Filter/: BandpassFilter.cpp  FormantFilter.cpp  HighpassFilter.cpp  LowpassFilter.cpp  PassFilter.cpp
src/generator/: Hann.cpp  Primitives.cpp  Trigonometric.cpp
src/math/: NaN.cpp  Trigonometry.cpp  Utils.cpp  WindowFunctions.cpp
src/resonix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: audio.csv  audio_generator.py  filter.py  long_duration.py  memory_analysis.py  memory_report.py  plot.py  py_test.py  resonix_test  run_test.sh  speed_report.py  test_main.cpp  text_to_speech.py
