[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resonix"
version = "0.1.0"
description = "Audio waveform generation library"
requires-python = ">=3.7"
dependencies = [
    "pybind11>=2.6.0",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
]
